changed some uses of deprecated APIs